feat(pagination): add shared package for pagination and hooks
